@@ -1,20 +1,20 @@
 ---
 title: Lier Azure Cache for Redis à votre application Azure Spring Cloud
 description: Découvrez comment lier Cache Azure pour Redis à votre application Azure Spring Cloud
-author: bmitchell287
+author: karlerickson
 ms.service: spring-cloud
 ms.topic: how-to
 ms.date: 10/31/2019
-ms.author: brendm
+ms.author: karler
 ms.custom: devx-track-java
-ms.openlocfilehash: dda826b50a74c109609fc7eec734b1d0de927ab3
-ms.sourcegitcommit: 4a54c268400b4158b78bb1d37235b79409cb5816
+ms.openlocfilehash: 31cb033bad3a6b356b447754670fd88bf0ee4663
+ms.sourcegitcommit: 6c6b8ba688a7cc699b68615c92adb550fbd0610f
 ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 04/28/2021
-ms.locfileid: "108135344"
+ms.lasthandoff: 08/13/2021
+ms.locfileid: "122532958"
 ---
-# <a name="bind-azure-cache-for-redis-to-your-azure-spring-cloud-application"></a>Lier Azure Cache for Redis à votre application Azure Spring Cloud 
+# <a name="bind-azure-cache-for-redis-to-your-azure-spring-cloud-application"></a>Lier Azure Cache for Redis à votre application Azure Spring Cloud
 
 **Cet article s’applique à :** ✔️ Java
 
@@ -28,7 +28,7 @@ Au lieu de configurer manuellement vos applications Spring Boot, vous pouvez lie
 
 Si vous n’avez pas encore déployé d’instance Azure Spring Cloud, suivez les étapes décrites dans ce [guide de démarrage rapide pour déployer une application Spring Cloud](./quickstart.md).
 
-## <a name="bind-azure-cache-for-redis"></a>Lier Cache Azure pour Redis
+## <a name="prepare-your-java-project"></a>Préparation du projet Java
 
 1. Ajoutez la dépendance suivante au fichier pom.xml de votre projet :
 
@@ -38,10 +38,14 @@ Si vous n’avez pas encore déployé d’instance Azure Spring Cloud, suivez le
         <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
     </dependency>
     ```
+
 1. Supprimer les propriétés de `spring.redis.*` du fichier `application.properties`
 
 1. Mettez à jour le déploiement actuel avec `az spring-cloud app update` ou créez un déploiement avec `az spring-cloud app deployment create`.
 
+## <a name="bind-your-app-to-the-azure-cache-for-redis"></a>Lier votre application à Azure Cache pour Redis
+
+#### <a name="service-binding"></a>[liaison de service](#tab/Service-Binding)
 1. Accédez à la page du service Azure Spring Cloud dans le portail Azure. Accédez au **tableau de bord de l’application** et sélectionnez l’application à lier à Azure Cache for Redis. Il s’agit de l’application que vous avez mise à jour ou déployée à l’étape précédente.
 
 1. Sélectionnez **Liaison de service**, puis sélectionnez **Créer une liaison de service**. Remplissez le formulaire en veillant à sélectionner la valeur **Azure Cache for Redis** pour le **type de liaison**, votre serveur Azure Cache for Redis, ainsi que l’option de clé **Primaire**.
@@ -49,12 +53,83 @@ Si vous n’avez pas encore déployé d’instance Azure Spring Cloud, suivez le
 1. Redémarrez l’application. La liaison doit maintenant fonctionner.
 
 1. Pour vérifier que la liaison de service est correcte, sélectionnez le nom de la liaison et examinez ses détails. Le champ `property` doit se présenter comme ceci :
-    ```
+
+    ```properties
     spring.redis.host=some-redis.redis.cache.windows.net
     spring.redis.port=6380
     spring.redis.password=abc******
     spring.redis.ssl=true
     ```
+
+#### <a name="terraform"></a>[Terraform](#tab/Terraform)
+
+Le script Terraform suivant montre comment configurer une application Azure Spring Cloud avec Azure Cache pour Redis.
+
+```terraform
+provider "azurerm" {
+  features {}
+}
+
+variable "application_name" {
+  type        = string
+  description = "The name of your application"
+  default     = "demo-abc"
+}
+
+resource "azurerm_resource_group" "example" {
+  name     = "example-resources"
+  location = "West Europe"
+}
+
+resource "azurerm_redis_cache" "redis" {
+  name                = "redis-${var.application_name}-001"
+  resource_group_name = azurerm_resource_group.example.name
+  location            = azurerm_resource_group.example.location
+  capacity            = 0
+  family              = "C"
+  sku_name            = "Standard"
+  enable_non_ssl_port = false
+  minimum_tls_version = "1.2"
+}
+
+resource "azurerm_spring_cloud_service" "example" {
+  name                = "${var.application_name}"
+  resource_group_name = azurerm_resource_group.example.name
+  location            = azurerm_resource_group.example.location
+}
+
+resource "azurerm_spring_cloud_app" "example" {
+  name                = "${var.application_name}-app"
+  resource_group_name = azurerm_resource_group.example.name
+  service_name        = azurerm_spring_cloud_service.example.name
+  is_public           = true
+  https_only          = true
+}
+
+resource "azurerm_spring_cloud_java_deployment" "example" {
+  name                = "default"
+  spring_cloud_app_id = azurerm_spring_cloud_app.example.id
+  cpu                 = 2
+  memory_in_gb        = 4
+  instance_count      = 2
+  jvm_options         = "-XX:+PrintGC"
+  runtime_version     = "Java_11"
+
+  environment_variables = {
+    "spring.redis.host"     = azurerm_redis_cache.redis.hostname
+    "spring.redis.password" = azurerm_redis_cache.redis.primary_access_key
+    "spring.redis.port"     = "6380"
+    "spring.redis.ssl"      = "true"
+  }
+}
+
+resource "azurerm_spring_cloud_active_deployment" "example" {
+  spring_cloud_app_id = azurerm_spring_cloud_app.example.id
+  deployment_name     = azurerm_spring_cloud_java_deployment.example.name
+}
+```
+
+---
 
 ## <a name="next-steps"></a>Étapes suivantes
 
